FlightPath 5.x Changelog
========================

2020-02-29
  Send correct 404 / 403 headers for page not found and accessed denied.

  Added new header() commands in index.php to further secure.
  
  Added header option to default .htaccess to make cookies more secure & "nosniff" was turned on.

  Various other modifications.


2020-02-25
  Removing old code.
  

2020-02-18
  Minor CSS tweaks.
  

2020-02-17
  Modified user_has_permission() and user_has_role() function to allow us to specify an account other than the current logged in user.
  
  Adding extra CSS to advising summary popup, so we can theme it better.
  

2020-02-15
  Adding ability to return plain txt instead of HTML in the advise_popup_display_summary function, so we can more easily email advising
  summaries to students.
  
  Added new settings to smtp module so we can more easily set the From address and name.

  Migrating the major-students-progress report into fpl_reports module.  Made changes to stats module, and added new hook, so that other
  modules can more easily add reports and links to the stats page.
  

2020-02-11
  Minor change to remove "warning" on Count().
  
  Made it so that the "submit" button on the main advise form goes through hook_content_alter.  This is so the new email_events module can add
  a checkbox.
  
  Added a new hook, hook_save_advising_session_from_post, while lets other modules act after an advising session has been saved.
  

2019-12-17
  Fixed search by role on Users page. It was only recognizing the first selection, and not if you changed the role more than once.
  

2019-10-04
  Fixed display bug in _FlightPath.php, where if a student's catalog year was past the current_catalog_year, it was set to 99999.  This caused
  a message to display onscreen which read "Could not find degreee... in catalog year 99999-100000..."
  

2019-09-13
  Made it so legacy support for 4x style "concentrations" is DISABLED by default.  This is to help clear up confusion.  New